--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -21,7 +21,8 @@
         android:id="@+id/btn_resume"
         android:layout_below="@+id/btn_play"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:visibility="invisible" />
 
     <CheckBox
         android:layout_width="wrap_content"
