--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -34,13 +34,13 @@
             <ImageView
                 android:layout_width="300dp"
                 android:layout_height="160dp"
-                android:id="@+id/imageView3"
+                android:id="@+id/imageView4"
                 android:src="@drawable/small_screenshot_lost_chef"
                 android:scaleType="centerInside" />
 
             <TextView android:text="@string/about_text2" android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/lbl_about_text"
+                android:id="@+id/lbl_about_text2"
                 android:textColor="@android:color/white" />
             <ImageView
                 android:layout_width="185dp"
@@ -50,7 +50,7 @@
                 android:scaleType="centerInside" />
             <TextView android:text="@string/about_text3" android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/lbl_about_text"
+                android:id="@+id/lbl_about_text3"
                 android:textColor="@android:color/white" />
         </LinearLayout>
     </ScrollView>
