--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.ekir.project.SplashActivity">
+    tools:context="se.erikgustafsson.ekir.lostchef.SplashActivity">
 
     <ImageView
         android:layout_width="wrap_content"
