--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -52,6 +52,12 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/lbl_about_text3"
                 android:textColor="@android:color/white" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Credits for third party graphics and sound"
+                android:id="@+id/btn_credits" />
         </LinearLayout>
     </ScrollView>
 
